--- a/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/CustomAlarm.MAUI.csproj
+++ b/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/CustomAlarm.MAUI.csproj
@@ -55,6 +55,10 @@
 	  <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\CustomAlarm.Application\CustomAlarm.Application.csproj" />
+	</ItemGroup>
+
 	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<OutputType>WinExe</OutputType>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
