--- a/poc/CustomAlarm.MAUI/CustomAlarm.Application/CustomAlarm.Application.csproj
+++ b/poc/CustomAlarm.MAUI/CustomAlarm.Application/CustomAlarm.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
