--- a/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/CustomAlarm.MAUI.csproj
+++ b/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/CustomAlarm.MAUI.csproj
@@ -25,6 +25,7 @@
 		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-maccatalyst'">14.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="'$(TargetFramework)' == 'net6.0-android'">21.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.18362.0</SupportedOSPlatformVersion>
+		<PlatformTarget>AnyCPU</PlatformTarget>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -53,10 +54,6 @@
 	<ItemGroup>
 	  <PackageReference Include="System.Reactive" Version="5.0.0" />
 	  <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\CustomAlarm.Application\CustomAlarm.Application.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
