--- a/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/CustomAlarm.MAUI.csproj
+++ b/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/CustomAlarm.MAUI.csproj
@@ -56,6 +56,12 @@
 	  <PackageReference Include="System.Reactive.Linq" Version="5.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Pages\HomePage.xaml">
+	    <Generator></Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<OutputType>WinExe</OutputType>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
