add calendar page

--- a/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/CustomAlarm.MAUI.csproj
+++ b/poc/CustomAlarm.MAUI/CustomAlarm.MAUI/CustomAlarm.MAUI.csproj
@@ -57,6 +57,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\CalendarPage.xaml.cs">
+	    <DependentUpon>CalendarPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="Pages\CalendarPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\HomePage.xaml">
 	    <Generator></Generator>
 	  </MauiXaml>
