--- a/poc/CustomAlarm.Xamarin/CustomAlarm.Xamarin/CustomAlarm.Xamarin/CustomAlarm.Xamarin.csproj
+++ b/poc/CustomAlarm.Xamarin/CustomAlarm.Xamarin/CustomAlarm.Xamarin/CustomAlarm.Xamarin.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2244" />
   </ItemGroup>
