--- a/poc/CustomAlarm.Xamarin/CustomAlarm.Xamarin/CustomAlarm.Xamarin.Android/Properties/AndroidManifest.xml
+++ b/poc/CustomAlarm.Xamarin/CustomAlarm.Xamarin/CustomAlarm.Xamarin.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,5 @@
 	<uses-sdk android:minSdkVersion="28" android:targetSdkVersion="31" />
 	<application android:label="CustomAlarm.Xamarin.Android" android:theme="@style/MainTheme" android:icon="@drawable/xamarin_logo"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 </manifest>
